# Zephyr_Multhithreaded_Peripherals_Project

./: CMakeLists.txt  Kconfig  README.md  Zephyr_Multhithreaded_Peripherals_Project.code-workspace  nrf52840dk_nrf52840.overlay  prj.conf
Bit_Manipulation/: CMakeLists.txt
Embedded_C_DSA/Interview_Questions/: Prime_Num.txt  StoreAt_Address.txt
Embedded_C_Design_Patterns/: CMakeLists.txt  Design_Patterns.Kconfig
Embedded_C_Design_Patterns/Singleton/: CMakeLists.txt  Singleton.Kconfig  Singleton.h
GPIOs/: CMakeLists.txt  GPIO_Notes.txt  GPIOs.Kconfig
GPIOs/KY_038_Clap_Sensor/: KY_038.kconfig
GPIOs/KY_038_Clap_Sensor/drivers/sensor/: CMakeLists.txt  Kconfig
GPIOs/KY_038_Clap_Sensor/drivers/sensor/emade9000/: CMakeLists.txt  Kconfig  emade9000.c  emade9000.h  emade9000_reg_map.h
GPIOs/KY_038_Clap_Sensor/dts/bindings/sensor/: zephyr,emade9000.yaml
GPIOs/LED_2_Color/: CMakeLists.txt  LED2CLR.c  LED2CLR.h  LED_2_Color.Kconfig
Generic_Declarations/: CMakeLists.txt  generic_declarations.h
SPI/: CMakeLists.txt  SPI.Kconfig
SPI/bme280_mpp/: CMakeLists.txt  bme280_mpp.Kconfig  bme280_mpp.c  bme280_mpp.h
i2C/: CMakeLists.txt  i2C.Kconfig
i2C/mcp9808/: CMakeLists.txt  mcp9808.Kconfig  mcp9808.c  mcp9808.h
src/: main.c
